--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>Inventario</mat-toolbar>
+<mat-toolbar>Inventario <button mat-button>Nuevo Item</button></mat-toolbar>
 <div fxLayout="row" fxLayout.xs="column">
     <div fxFlex>
         <app-list></app-list>
