--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -6,6 +6,13 @@
   </mat-list-item>
 </mat-list> -->
 
+
+<mat-form-field>
+  <input matInput #filter placeholder="Filter users">
+</mat-form-field>
+<mat-form-field>
+  <input matInput #filter2 placeholder="Filter users 2">
+</mat-form-field>
 <div>
     <mat-table #table [dataSource]="dataSource">
   
@@ -35,17 +42,28 @@
         <mat-header-cell *matHeaderCellDef> description </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
       </ng-container>
+      <ng-container matColumnDef="options">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Options </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <button mat-mini-fab color="primary" (click)='editItem()'>
+                <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-fab color="warn" (click)='deleteItem()'>
+                <mat-icon>delete</mat-icon>
+            </button>
 
+        </mat-cell>
+    </ng-container>
       
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
-    <mat-paginator #paginator
-    [length]="100"
+    <mat-paginator (page)="pagChanges($event)" #paginator
+    [length]="items.length"
     [pageIndex]="0"
     [pageSize]="25"
-    [pageSizeOptions]="[5, 10, 25, 100]">
+    [pageSizeOptions]="[5, 10, 25, 100]" >
 </mat-paginator>
   </div>
   
