--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,19 @@
-<p>
-  detail works!
-</p>
+<h2 mat-dialog-title>Nuevo item</h2>
+<form class="form" [formGroup]="form">
+  <mat-dialog-content>
+
+    <mat-form-field>
+      <input matInput placeholder="Name" formControlName="name">
+    </mat-form-field>
+    <mat-slide-toggle formControlName="isActive">Status</mat-slide-toggle>
+    <mat-form-field>
+      <textarea matInput placeholder="Description" formControlName="description"></textarea>
+    </mat-form-field>
+
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button mat-button mat-dialog-close>Cancel</button>
+    <!-- Can optionally provide a result for the closing dialog. -->
+    <button (click)="item(form.value)" mat-button [disabled]="form.invalid" [mat-dialog-close]="true">Save</button>
+  </mat-dialog-actions>
+</form>
