--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,6 @@
 </mat-toolbar>
 <div fxLayout="row" fxLayout.xs="column">
     <div fxFlex>
-        <app-list (edited)="edit($event)"(delete)="delete($event) "></app-list>
+        <app-list (edited)="edit($event)"(delete)="deleteItem($event)"></app-list>
     </div>
-
 </div>
