--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -60,7 +60,7 @@
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
     <mat-paginator (page)="pagChanges($event)" #paginator
-    [length]="items.length"
+    [length]="items?.length"
     [pageIndex]="0"
     [pageSize]="25"
     [pageSizeOptions]="[5, 10, 25, 100]" >
